--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,37 @@
 annotated-types==0.5.0
 anyio==3.7.1
+async-timeout==4.0.3
 certifi==2023.7.22
+cffi==1.15.1
 charset-normalizer==3.2.0
 click==8.1.7
+cryptography==41.0.3
 exceptiongroup==1.1.3
 fastapi==0.103.1
 filelock==3.12.3
 h11==0.14.0
+hiredis==2.2.3
 httptools==0.6.0
 idna==3.4
 install==1.3.5
-pydantic==2.3.0
-pydantic-core==2.6.3
+more-itertools==9.1.0
+pycparser==2.21
+pydantic==2.0.3
+pydantic-core==2.3.0
 python-dotenv==1.0.0
 python-multipart==0.0.6
+python-ulid==1.1.0
 PyYAML==6.0.1
+redis==4.6.0
+redis-om==0.2.1
 requests==2.31.0
 requests-file==1.5.1
 six==1.16.0
 sniffio==1.3.0
 starlette==0.27.0
 tldextract==3.4.4
+types-pyOpenSSL==23.2.0.2
+types-redis==4.6.0.5
 typing-extensions==4.7.1
 urllib3==2.0.4
 uvicorn==0.23.2
