--- a/requirements.txt
+++ b/requirements.txt
@@ -9,15 +9,32 @@ cryptography==41.0.3
 exceptiongroup==1.1.3
 fastapi==0.103.1
 filelock==3.12.3
+flake8==6.1.0
 h11==0.14.0
 hiredis==2.2.3
+httpcore==0.17.3
 httptools==0.6.0
+httpx==0.24.1
 idna==3.4
+iniconfig==2.0.0
 install==1.3.5
+isort==5.12.0
+mccabe==0.7.0
+mirakuru==2.5.1
 more-itertools==9.1.0
+mypy==1.5.1
+mypy-extensions==1.0.0
+packaging==23.1
+pluggy==1.3.0
+port-for==0.7.1
+psutil==5.9.5
+pycodestyle==2.11.0
 pycparser==2.21
 pydantic==2.0.3
 pydantic-core==2.3.0
+pyflakes==3.1.0
+pytest==7.4.1
+pytest-redis==3.0.2
 python-dotenv==1.0.0
 python-multipart==0.0.6
 python-ulid==1.1.0
@@ -30,6 +47,7 @@ six==1.16.0
 sniffio==1.3.0
 starlette==0.27.0
 tldextract==3.4.4
+tomli==2.0.1
 types-pyOpenSSL==23.2.0.2
 types-redis==4.6.0.5
 typing-extensions==4.7.1
